Update 63130500120 work EIEIEIEIEIEIEIEI

--- a/assignment/HW04_63130500120/HW04_63130500120.md
+++ b/assignment/HW04_63130500120/HW04_63130500120.md
@@ -6,33 +6,204 @@ Choose Dataset:
 1. Top 270 Computer Science / Programing Books (Data from Thomas Konstantin, [Kaggle](https://www.kaggle.com/thomaskonstantin/top-270-rated-computer-science-programing-books)) >> [Using CSV](https://raw.githubusercontent.com/safesit23/INT214-Statistics/main/datasets/prog_book.csv)
 
 ### Outlines
-1. Explore the dataset
-2. Learning function from Tidyverse
-3. Transform data with dplyr and finding insight the data
-4. Visualization with GGplot2
+1. [Explore the dataset](#explore-the-dataset)
+2. [Learning function from Tidyverse](#learning-function-from-tidyverse)
+3. [Transform data with dplyr and finding insight the data](#transform-data-with-dplyr-and-finding-insight-the-data)
+4. [Visualization with GGplot2](#visualization-with-ggplot2)
 
-## Part 1: Explore the dataset
-
-```R
-# Library
-library(name)
-
-# Dataset
-dataset <- read_csv("")
-```
-
-In this dataset has .....
-
-## Part 2: Learning function from Tidyverse
-
-- Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select)). It using for select columns
+## Explore the dataset
 
 ```R
-starwars %>% select(name,height)
-```
-** You can sepearate this part or combine in part of `Transform data with dplyr and finding insight the data`
+#install lib
+install.packages("dplyr")
+install.packages("readr")
+install.packages("ggplot2")
 
-## Part 3: Transform data with dplyr and finding insight the data
+#load lib
+library(dplyr)
+library(readr)
+library(ggplot2)
+
+#import datasets
+top_cs <- read_csv("https://raw.githubusercontent.com/safesit23/INT214-Statistics/main/datasets/prog_book.csv")
+
+#Explore dataset
+glimpse(top_cs)
+```
+
+ใน dataset นี้มีข้อมูลดังนี้
+
+```
+หลังจาก read_csv
+Rows: 271 Columns: 7                                                                              
+── Column specification ────────────────────────────────────────────────────────────────────────────
+Delimiter: ","
+chr (3): Book_title, Description, Type
+dbl (3): Rating, Number_Of_Pages, Price
+```
+
+```
+หลังจาก glimpse
+Rows: 271
+Columns: 7
+$ Rating          <dbl> 4.17, 4.01, 3.33, 3.97, 4.06, 3.84, 4.09, 4.15, 3.87, 4.62, 4.03, 3.78, 3.…
+$ Reviews         <dbl> 3829, 1406, 0, 1658, 1325, 117, 5938, 1817, 2093, 0, 160, 481, 33, 1255, 5…
+$ Book_title      <chr> "The Elements of Style", "The Information: A History, a Theory, a Flood", …
+$ Description     <chr> "This style manual offers practical advice on improving writing skills. Th…
+$ Number_Of_Pages <dbl> 105, 527, 50, 393, 305, 288, 256, 368, 259, 128, 352, 352, 200, 328, 240, …
+$ Type            <chr> "Hardcover", "Hardcover", "Kindle Edition", "Hardcover", "Kindle Edition",…
+$ Price           <dbl> 9.323529, 11.000000, 11.267647, 12.873529, 13.164706, 14.188235, 14.232353…
+
+```
+
+คำอธิบายแต่ละ column
+
+|Column|Describe|
+|-|-|
+|Rating|ค่าคะแนนเรตติ้งของหนังสือ|
+|Reviews|จำนวนการรีวิวของหนังสือ|
+|Book_title|ชื่อหนังสือ|
+|Description|คำอธิบายเกี่ยวกับหนังสือ|
+|Number_Of_Pages|จำนวนหน้าของหนังสือ|
+|Type|ประเภทหนังสือ|
+|Price|ราคาของหนังสือ|
+
+## Learning function from Tidyverse
+
+- Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select). It using for select columns
+- Function `slice()` from package [dplyr](https://dplyr.tidyverse.org/articles/base.html). It using for slice columns that you choose.
+- Function `filter()` from package [dplyr](https://dplyr.tidyverse.org/articles/base.html). Return rows with matching conditions
+- Function `relocate()` from package [dplyr](https://dplyr.tidyverse.org/articles/base.html). It using for locate column the you want into front
+- Function `arrange()` rom package [dplyr](https://dplyr.tidyverse.org/articles/base.html). orders the rows of a data frame by the values of selected columns.
+
+#### 1.แสดงชื่อหนังสือและเรทติ้งของหนังสือที่มีเรตติ้งมากที่สุดในหมวดหมู่ Hardcover
+
+##### Code
+
+```R
+top_cs %>%
+  filter(Type == 'Hardcover') %>%
+  filter(Rating == max(Rating)) %>%
+  select(Book_title,Rating)
+```
+
+##### Result
+
+```R
+# A tibble: 1 × 2
+  Book_title                                              Rating
+  <chr>                                                    <dbl>
+1 The Art of Computer Programming, Volumes 1-4a Boxed Set   4.77
+```
+
+#### 2. ชื่อหนังสือ 10 อันดับแรกใน dataset
+
+##### Code
+
+```R
+top_cs %>% 
+  slice(1:10) %>%
+  select(Book_title)
+```
+
+##### Result
+
+```
+# A tibble: 10 × 1
+   Book_title                                                                            
+   <chr>                                                                                 
+ 1 The Elements of Style                                                                 
+ 2 The Information: A History, a Theory, a Flood                                         
+ 3 Responsive Web Design Overview For Beginners                                          
+ 4 Ghost in the Wires: My Adventures as the World's Most Wanted Hacker                   
+ 5 How Google Works                                                                      
+ 6 The Meme Machine                                                                      
+ 7 Start with Why: How Great Leaders Inspire Everyone to Take Action                     
+ 8 Algorithms to Live By: The Computer Science of Human Decisions                        
+ 9 Weapons of Math Destruction: How Big Data Increases Inequality and Threatens Democracy
+10 ZX Spectrum Games Code Club: Twenty fun games to code and learn  
+```
+
+#### 3.เพิ่ม column ข้อมูล Rating/Review
+
+##### Code
+
+```R
+top_cs %>%
+  mutate(Rating/Reviews)
+```
+
+##### Result
+
+```
+# A tibble: 271 × 8
+   Rating Reviews Book_title        Description         Number_Of_Pages Type  Price `Rating/Reviews`
+    <dbl>   <dbl> <chr>             <chr>                         <dbl> <chr> <dbl>            <dbl>
+ 1   4.17    3829 The Elements of … "This style manual…             105 Hard…  9.32         0.00109 
+ 2   4.01    1406 The Information:… "James Gleick, the…             527 Hard… 11            0.00285 
+ 3   3.33       0 Responsive Web D… "In Responsive Web…              50 Kind… 11.3        Inf       
+ 4   3.97    1658 Ghost in the Wir… "If they were a ha…             393 Hard… 12.9          0.00239 
+ 5   4.06    1325 How Google Works  "Both Eric Schmidt…             305 Kind… 13.2          0.00306 
+ 6   3.84     117 The Meme Machine  "What is a meme? F…             288 Pape… 14.2          0.0328  
+ 7   4.09    5938 Start with Why: … "Why do you do wha…             256 Hard… 14.2          0.000689
+ 8   4.15    1817 Algorithms to Li… "A fascinating exp…             368 Hard… 14.4          0.00228 
+ 9   3.87    2093 Weapons of Math … "A former Wall Str…             259 Hard… 14.5          0.00185 
+10   4.62       0 ZX Spectrum Game… "This book is idea…             128 Pape… 14.6        Inf       
+# … with 261 more rows
+```
+
+#### 4.แสดงข้อมูลหนังสือตามลำดับราคาจากน้อยไปมาก 5 รายการแรก
+
+##### Code
+
+```R
+top_cs %>% 
+  arrange(Price) %>%
+  slice(1:5)
+```
+
+##### Result
+
+```
+# A tibble: 5 × 7
+  Rating Reviews Book_title              Description                    Number_Of_Pages Type   Price
+   <dbl>   <dbl> <chr>                   <chr>                                    <dbl> <chr>  <dbl>
+1   4.17    3829 The Elements of Style   "This style manual offers pra…             105 Hardc…  9.32
+2   4.01    1406 The Information: A His… "James Gleick, the author of …             527 Hardc… 11   
+3   3.33       0 Responsive Web Design … "In Responsive Web Design Ove…              50 Kindl… 11.3 
+4   3.97    1658 Ghost in the Wires: My… "If they were a hall of fame …             393 Hardc… 12.9 
+5   4.06    1325 How Google Works        "Both Eric Schmidt and Jonath…             305 Kindl… 13.2 
+```
+
+#### 5.แสดง column Book_Title เป็น column แรก
+
+##### Code
+
+```R
+top_cs %>% relocate(Book_title)
+```
+
+##### Result
+
+```
+# A tibble: 271 × 7
+   Book_title                Rating Reviews Description                 Number_Of_Pages Type   Price
+   <chr>                      <dbl>   <dbl> <chr>                                 <dbl> <chr>  <dbl>
+ 1 The Elements of Style       4.17    3829 "This style manual offers …             105 Hardc…  9.32
+ 2 The Information: A Histo…   4.01    1406 "James Gleick, the author …             527 Hardc… 11   
+ 3 Responsive Web Design Ov…   3.33       0 "In Responsive Web Design …              50 Kindl… 11.3 
+ 4 Ghost in the Wires: My A…   3.97    1658 "If they were a hall of fa…             393 Hardc… 12.9 
+ 5 How Google Works            4.06    1325 "Both Eric Schmidt and Jon…             305 Kindl… 13.2 
+ 6 The Meme Machine            3.84     117 "What is a meme? First coi…             288 Paper… 14.2 
+ 7 Start with Why: How Grea…   4.09    5938 "Why do you do what you do…             256 Hardc… 14.2 
+ 8 Algorithms to Live By: T…   4.15    1817 "A fascinating exploration…             368 Hardc… 14.4 
+ 9 Weapons of Math Destruct…   3.87    2093 "A former Wall Street quan…             259 Hardc… 14.5 
+10 ZX Spectrum Games Code C…   4.62       0 "This book is ideal for ZX…             128 Paper… 14.6 
+# … with 261 more rows
+```
+
+
+## Transform data with dplyr and finding insight the data
 
 //Explain here
 
@@ -51,7 +222,7 @@ Result:
 - list 1
 - list 2
 
-## Part 4: Visualization with GGplot2
+## Visualization with GGplot2
 
 ### 1.) Graph show relation between height and mass
 
