--- a/assignment/HW04_63130500120/HW04_63130500120.md
+++ b/assignment/HW04_63130500120/HW04_63130500120.md
@@ -6,22 +6,30 @@ Choose Dataset:
 1. Top 270 Computer Science / Programing Books (Data from Thomas Konstantin, [Kaggle](https://www.kaggle.com/thomaskonstantin/top-270-rated-computer-science-programing-books)) >> [Using CSV](https://raw.githubusercontent.com/safesit23/INT214-Statistics/main/datasets/prog_book.csv)
 
 ### Outlines
+#### Part A
+
 1. [Explore the dataset](#explore-the-dataset)
 2. [Learning function from Tidyverse](#learning-function-from-tidyverse)
 3. [Transform data with dplyr and finding insight the data](#transform-data-with-dplyr-and-finding-insight-the-data)
 4. [Visualization with GGplot2](#visualization-with-ggplot2)
 
+#### Part B
+5. [Visualization with PowerBI](#visualization-with-powerbi)
 ## Explore the dataset
 
 ```R
 #install lib
 install.packages("dplyr")
 install.packages("readr")
+install.packages("stringr")
+install.packages("assertive")
 install.packages("ggplot2")
 
 #load lib
 library(dplyr)
 library(readr)
+library(stringr)
+library(assertive)
 library(ggplot2)
 
 #import datasets
@@ -205,41 +213,83 @@ top_cs %>% relocate(Book_title)
 
 ## Transform data with dplyr and finding insight the data
 
-//Explain here
+#### 1. หาข้อมูลหนังสือที่มี Rating มากกว่า Rating น้อยที่สุด และมีคะแนนรีวิว มากกว่า 200 และเป็นประเภท Hardcover
 
 ```R
-#Code here
+top_cs %>% filter(Rating>min(Rating)) %>%
+  filter(Reviews>200) %>% filter(Type=="Hardcover")
 ```
 
 Result:
 
-```R
-#Copy Result from console to here
+```
+# A tibble: 20 × 7
+   Rating Reviews Book_title                 Description                 Number_Of_Pages Type  Price
+    <dbl>   <dbl> <chr>                      <chr>                                 <dbl> <chr> <dbl>
+ 1   4.17    3829 The Elements of Style      "This style manual offers …             105 Hard…  9.32
+ 2   4.01    1406 The Information: A Histor… "James Gleick, the author …             527 Hard… 11   
+ 3   3.97    1658 Ghost in the Wires: My Ad… "If they were a hall of fa…             393 Hard… 12.9 
+ 4   4.09    5938 Start with Why: How Great… "Why do you do what you do…             256 Hard… 14.2 
+ 5   4.15    1817 Algorithms to Live By: Th… "A fascinating exploration…             368 Hard… 14.4 
+ 6   3.87    2093 Weapons of Math Destructi… "A former Wall Street quan…             259 Hard… 14.5 
+ 7   3.78     481 The Master Algorithm: How… "A thought-provoking and w…             352 Hard… 15.2 
+ 8   3.87    1255 Superintelligence: Paths,… "Superintelligence asks th…             328 Hard… 15.7 
+ 9   3.87     593 The Art of the Start: The… "A new product, a new serv…             240 Hard… 15.9 
+10   3.95     417 Kingpin: How One Hacker T… "The true story of Max But…             288 Hard… 16.1 
+11   3.75     370 Our Final Invention: Arti… "In as little as a decade,…             336 Hard… 16.9 
+12   4.1     2092 The Innovators: How a Gro… "The computer and the inte…             542 Hard… 17.2 
+13   3.71     676 Big Data: A Revolution Th… "A revelatory exploration …             242 Hard… 17.6 
+14   3.97     491 How to Create a Mind: The… "The bold futurist and bes…             336 Hard… 19.9 
+15   4.27    2629 The Phoenix Project: A No… "Bill is an IT manager at …             345 Hard… 24.3 
+16   4.06     302 The Strangest Man: The Hi… "'A monumental achievement…             539 Hard… 25.8 
+17   3.83     278 Automate This: How Algori… "The rousing story of the …             256 Hard… 35.8 
+18   4.4      496 The Visual Display of Qua… "The classic book on stati…             197 Hard… 42.0 
+19   4.25     275 Refactoring: Improving th… "As the application of obj…             431 Hard… 57.2 
+20   4.18     351 Design Patterns: Elements… "Capturing a wealth of exp…             416 Hard… 60.7 
 ```
 
-//Explain
+#### 2. แสดงชื่อหนังสือ เรทติ้ง และราคา ของหนังสือที่มีเรทติ้งน้อยกว่า 4.5 โดยแสดงหนังสือที่มีราคาน้อยที่สุดที่ตรงตามเงื่อนไข
 
-- list 1
-- list 2
+```R
+top_cs %>% select(Book_title, Rating, Price) %>%
+  filter(Rating < 4.5) %>% slice_min(Price)
+```
+
+Result:
+
+```
+# A tibble: 1 × 3
+  Book_title            Rating Price
+  <chr>                  <dbl> <dbl>
+1 The Elements of Style   4.17  9.32
+```
 
 ## Visualization with GGplot2
 
-### 1.) Graph show relation between height and mass
+### 1.) แสดงจำนวนหนังสือแต่ละประเภท
 
 ```R
-scat_plot <- starwars %>% filter(mass<500) %>% ggplot(aes(x=height,y=mass))+
-  geom_point(aes(color=gender))
-
-scat_plot+geom_smooth()
+ggplot(top_cs,aes(x=Type,fill=Type)) + geom_bar() +
+  scale_fill_hue(c = 100,200,30) 
 ```
 
 Result:
 
 ![Graph 1](graph1.png)
 
-**Guideline:
-Embed Image by using this syntax in markdown file
+### 2.) แสดงความสัมพันธ์ระหว่างจำนวนรีวิวกับราคา
 
-````R
-![Name](imageFile)
-````
+```R
+scat_plot <- top_cs %>% filter(Price<180) %>% ggplot(aes(x=Price,y=Reviews))+
+  geom_point(aes(color=Type))
+scat_plot+geom_smooth()
+```
+
+Result:
+
+![Graph 2](graph2.png)
+
+## Visualization with PowerBI
+
+เราใช้เครื่องมือ powerBI ในการทำ Visualization
+[Click Here]()
