--- a/assignment/HW04_63130500120/HW04_63130500120.md
+++ b/assignment/HW04_63130500120/HW04_63130500120.md
@@ -292,4 +292,4 @@ Result:
 ## Visualization with PowerBI
 
 เราใช้เครื่องมือ powerBI ในการทำ Visualization
-[Click Here]()
+[Click Here](https://app.powerbi.com/view?r=eyJrIjoiYzM3NDkwNTMtNjE5NS00MDdkLWE1NTEtNjY5Y2VhZjBjOWVhIiwidCI6IjZmNDQzMmRjLTIwZDItNDQxZC1iMWRiLWFjMzM4MGJhNjMzZCIsImMiOjEwfQ%3D%3D&pageName=ReportSection)
